database done and favicon and title

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+
+    <title>JC's Trello</title>
   </head>
   <body>
     <div id="root"></div>
