--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
 
     <title>JC's Trello</title>
   </head>
