board and list CRUD

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- <link rel="icon" type="image/png" href="./favicon.png" /> -->
+    <link rel="icon"
+      type="image/png"
+      href="./favicon.png" />
     <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
 
     <title>JC's Trello</title>
