cards drag to another list works

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/png" href="./favicon.png" /> -->
     <link rel="icon"
       type="image/png"
-      href="./favicon.png" />
+      href="https://i.ibb.co/fSqjR5r/icons8-t-key-48.png" />
     <!-- <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> -->
 
     <title>JC's Trello</title>
